--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target" :"ES2015",
-        "noImplicitAny" : true
+        "target": "ES2015",
+        "noImplicitAny": true
     },
     "files": [
         "engine/main.ts",
@@ -10,6 +10,6 @@
         "engine/collisions.ts",
         "penguins/penguinlevel.ts",
         "penguins/penguinobjects.ts",
-        "penguins/main.ts"
+        "penguins/penguinmain.ts",
     ]
 }
